[gd_scene load_steps=11 format=3 uid="uid://32dna3221nu1"]

[ext_resource type="Script" path="res://Scene/Globals.gd" id="1_0b5qq"]
[ext_resource type="AudioStream" uid="uid://br2o532trfcqn" path="res://Sounds/Glass.mp3" id="2_efv86"]
[ext_resource type="AudioStream" uid="uid://jx8t7rawu3mf" path="res://Sounds/Water.mp3" id="3_kg4sx"]
[ext_resource type="AudioStream" uid="uid://bxs611115d27v" path="res://Sounds/Portal.mp3" id="4_aksbl"]
[ext_resource type="AudioStream" uid="uid://c61iuhgp86nuu" path="res://Sounds/Scrap2.mp3" id="5_bjdlx"]
[ext_resource type="AudioStream" uid="uid://dk4adq4ds6tvs" path="res://Sounds/Key.mp3" id="6_kjh36"]
[ext_resource type="AudioStream" uid="uid://y4julrkdc2wx" path="res://Sounds/Cnoak.mp3" id="7_u6b3d"]
[ext_resource type="AudioStream" uid="uid://cre1hkepl4nhw" path="res://Sounds/Basement.mp3" id="8_njnts"]
[ext_resource type="AudioStream" uid="uid://b2dabi65xb3wm" path="res://Music/Music_1.mp3" id="9_747x6"]
[ext_resource type="PackedScene" uid="uid://cgs3ocsniws7t" path="res://Scene/igbgui.tscn" id="10_jiury"]

[node name="Globals" type="Node2D"]
script = ExtResource("1_0b5qq")

[node name="Audio_glass" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_efv86")
bus = &"Sounds"

[node name="Audio_water" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_kg4sx")
bus = &"Sounds"

[node name="Audio_portal" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_aksbl")
volume_db = -5.0
bus = &"Sounds"

[node name="Audio_key" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_kjh36")

[node name="Audio_cnock" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_u6b3d")
bus = &"Sounds"

[node name="Audio_scrap" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_bjdlx")
volume_db = 5.0
bus = &"Sounds"

[node name="Audio_hatch" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_njnts")
volume_db = -20.0
bus = &"Sounds"

[node name="Music" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_747x6")
volume_db = -25.0
autoplay = true

[node name="igbgui" parent="." instance=ExtResource("10_jiury")]
game_ready = true
